--- a/app/src/main/res/layout/fragment_list_token_admin.xml
+++ b/app/src/main/res/layout/fragment_list_token_admin.xml
@@ -37,7 +37,21 @@
         android:id="@+id/includeLisToken"
         layout="@layout/list_token"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginBottom="@dimen/height_bottom_bar"
         android:layout_marginTop="@dimen/main_margin_top"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/switchOldTickets" />
+
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/switchOldTickets"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginEnd="@dimen/main_end_margin"
+        android:layout_marginTop="@dimen/main_margin_top"
+        android:text="@string/show_complete_token"
+        android:theme="@style/titleTheme"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinnerListToken" />
 </androidx.constraintlayout.widget.ConstraintLayout>
