--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:visibility="gone"
         app:menu="@menu/bottom_menu_admin"
-        android:background="@color/purple_500" />
+        android:background="@color/light_blue" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
