--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -6,35 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".SplashScreenActivity">
 
-    <!--<Button
-        android:id="@+id/customerButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/ms_splash_btn"
-        android:layout_marginEnd="@dimen/me_splash_btn"
-        android:layout_marginBottom="@dimen/mb_button_splash_screen"
-        android:text="@string/text_customer_btn"
-        app:layout_constraintBottom_toTopOf="@+id/employeeButton" />
-
-    <Button
-        android:id="@+id/employeeButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/ms_splash_btn"
-        android:layout_marginEnd="@dimen/me_splash_btn"
-        android:layout_marginBottom="@dimen/mb_button_splash_screen"
-        android:text="@string/text_employee_btn"
-        app:layout_constraintBottom_toTopOf="@+id/adminButton" />
-
-    <Button
-        android:id="@+id/adminButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/ms_splash_btn"
-        android:layout_marginEnd="@dimen/me_splash_btn"
-        android:layout_marginBottom="@dimen/mb_admin_btn"
-        android:text="@string/text_admin_btn"
-        app:layout_constraintBottom_toBottomOf="parent" />-->
 
     <TextView
         android:id="@+id/splashScreenTextView"
@@ -42,6 +13,10 @@
         android:layout_height="wrap_content"
         android:text="@string/text_splash_screen_tv"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:theme="@style/valueTheme"
+        android:textColor="@color/blue"
+        android:textStyle="bold"
+        android:textAllCaps="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/iconImageView" />
@@ -54,5 +29,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_blue_services_24" />
+        app:srcCompat="@drawable/ic_blue_services_24"
+        android:contentDescription="@string/desc_icon_image_view" />
 </androidx.constraintlayout.widget.ConstraintLayout>
