--- a/app/src/main/res/layout/fragment_customer.xml
+++ b/app/src/main/res/layout/fragment_customer.xml
@@ -30,8 +30,9 @@
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/main_margin_top"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@id/enrollButton"
+        android:layout_marginBottom="@dimen/height_bottom_bar"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleCarsTextView" />
 
     <TextView
@@ -46,26 +47,26 @@
 
     <Button
         android:id="@+id/enrollButton"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/main_margin_top"
-        android:text="Записаться"
-        android:layout_marginBottom="@dimen/height_bottom_bar"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="@dimen/main_end_margin"
+        android:background="@drawable/rounded_btn"
+        android:text="@string/text_btn_enroll"
+        app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/listCarsRecyclerView"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/nameCustomerTextView" />
 
     <TextView
         android:id="@+id/nameCustomerTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/main_start_margin"
         android:layout_marginTop="@dimen/mt_16dp"
         android:textSize="26sp"
         android:theme="@style/valueTheme"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginEnd="@dimen/main_end_margin"
         app:layout_constraintTop_toBottomOf="@+id/include"
         tools:text="@string/text_name_text_view" />
 
