--- a/app/src/main/res/layout/fragment_employee_page.xml
+++ b/app/src/main/res/layout/fragment_employee_page.xml
@@ -30,71 +30,39 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="@dimen/main_margin_top"
-        android:background="@color/purple_500"
+        android:background="@color/grey"
         app:layout_constraintTop_toBottomOf="@id/phoneTextView" />
 
-    <!--<Button
-        android:id="@+id/prevWeekButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/branch_mt_8dp"
-        android:enabled="false"
-        android:text="@string/text_prev_week_btn"
-        app:layout_constraintEnd_toStartOf="@id/nextWeekButton"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/selection" />-->
-
-    <!--<Button
-        android:id="@+id/nextWeekButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/branch_mt_8dp"
-        android:text="@string/text_next_week_btn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/prevWeekButton"
-        app:layout_constraintTop_toBottomOf="@+id/selection" />-->
-
-    <!--<androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/tokenRecyclerView"
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/switchOldTickets"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/branch_sm_8dp"
-        android:layout_marginTop="@dimen/branch_mt_8dp"
-        android:layout_marginEnd="@dimen/branch_em_8dp"
-        android:orientation="vertical"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintTop_toBottomOf="@+id/nextWeekButton" />-->
+        android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginEnd="@dimen/main_end_margin"
+        android:layout_marginTop="@dimen/main_margin_top"
+        android:text="@string/show_complete_token"
+        android:theme="@style/titleTheme"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/selection" />
 
     <include
         android:id="@+id/includeLisToken"
         layout="@layout/list_token"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/selection" />
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/switchOldTickets" />
 
     <ProgressBar
         android:id="@+id/employeeProgressBar"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/selection" />
 
-    <!--<TextView
-        android:id="@+id/messageNullTokenTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="@string/text_message_null_token_TV"
-        android:theme="@style/titleTheme"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/nextWeekButton" />-->
 
     <TextView
         android:id="@+id/phoneTextView"
