--- a/app/src/main/res/layout/list_token.xml
+++ b/app/src/main/res/layout/list_token.xml
@@ -9,6 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/main_margin_top"
+        android:background="@drawable/rounded_btn"
         android:enabled="false"
         android:text="@string/text_prev_week_btn"
         app:layout_constraintEnd_toStartOf="@id/nextWeekButton"
@@ -20,6 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/main_margin_top"
+        android:background="@drawable/rounded_btn"
         android:text="@string/text_next_week_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/prevWeekButton"
@@ -28,10 +30,11 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/tokenRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="@dimen/main_margin_top"
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nextWeekButton" />
 
     <TextView
