--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -13,7 +13,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/purple_500"
+        android:background="@color/light_blue"
         android:elevation="4dp"
         app:layout_collapseMode="parallax"
         app:layout_scrollFlags="scroll|enterAlways"
