--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,5 @@
     <dimen name="width_icon_car">150dp</dimen>
     <dimen name="height_icon_profile_image_view">200dp</dimen>
     <dimen name="height_bottom_bar">60dp</dimen>
+    <dimen name="small_margin">8dp</dimen>
 </resources>
