Отредактировал просмотр детально описания талона

--- a/app/src/main/res/layout/fragment_branch.xml
+++ b/app/src/main/res/layout/fragment_branch.xml
@@ -17,10 +17,10 @@
         android:id="@+id/iconImageView"
         android:layout_width="@dimen/width_icon_branch"
         android:layout_height="@dimen/width_icon_branch"
-        android:contentDescription="@string/desc_icon_image_view"
-        android:visibility="gone"
         android:layout_marginStart="@dimen/main_start_margin"
         android:layout_marginTop="@dimen/main_margin_top"
+        android:contentDescription="@string/desc_icon_image_view"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/include"
         app:srcCompat="@drawable/ic_icon_branch" />
@@ -79,10 +79,10 @@
         android:id="@+id/listEmployeeRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="@dimen/main_margin_top"
-        android:layout_marginBottom="@dimen/main_margin_top"
         android:layout_marginStart="@dimen/main_start_margin"
+        android:layout_marginTop="@dimen/main_margin_top"
         android:layout_marginEnd="@dimen/main_end_margin"
+        android:layout_marginBottom="@dimen/height_bottom_bar"
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
